syntax = "proto3";

option csharp_namespace = "TourMate.AuthService.Api.Protos";

service UserService {
  rpc GetCustomerByAccountId (GetByAccountIdRequest) returns (CustomerReply);
  rpc GetTourGuideByAccountId (GetByAccountIdRequest) returns (TourGuideReply);
}

message GetByAccountIdRequest {
  int32 accountId = 1;
}

message CustomerReply {
  string fullName = 1;
}

message TourGuideReply {
  string fullName = 1;
}
